--- a/index.html
+++ b/index.html
@@ -12,8 +12,19 @@
 
 <body>
   <div id="app">
-    <h1>{{ product }}</h1>
-    <p>{{ description }}</p>
+    <div class="nav-bar"></div>
+
+    <div class="product-display">
+      <div class="product-container">
+        <div class="product-image">
+          <img v-bind:src="image">
+        </div>
+        <div class="product-info">
+          <h1>{{ product }}</h1>
+          <a :href="url">Made by Ethan</a>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- Import App -->
