--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
     <div class="product-display">
       <div class="product-container">
         <div class="product-image">
-          <img :class="{ 'out-of-stock-img': !inStock }" v-bind:src="image">
+          <img v-bind:src="image">
         </div>
         <div class="product-info">
-          <h1>{{ product }}</h1>
+          <h1>{{ title }}</h1>
+          <p>{{ sale }}</p>
           <p v-if="inStock">In Stock</p>
           <p v-else>Out of Stock</p>
           <ul>
             <li v-for="detail in details">{{ detail }}</li>
           </ul>
 
-          <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)"
+          <div v-for="(variant, index) in variants" :key="variant.id" @mouseover="updateVariant(index)"
             class="color-circle" :style="{ backgroundColor: variant.color }">
           </div>
 
-          <button class="button" :class="{ disabledButton: !inStock }" :disabled="!inStock" @click="addToCart">
-            Add to Cart
-          </button>
+          <button class="button" :class="{ disabledButton: !inStock }" :disabled="!inStock" v-on:click="addToCart">Add
+            to Cart</button>
         </div>
       </div>
     </div>
